load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "binary_tree",
    srcs = ["binary_tree.rs"],
    crate_root = "binary_tree.rs",
    edition = "2018",
    deps = [
        # ...list of dependencies if any...
    ],
)

rust_test(
    name = "binary_tree_test",
    srcs = ["binary_tree.rs"],
    crate_root = "binary_tree.rs",
    edition = "2018",
    deps = [
        # ...list of dependencies if any...
    ],
    use_libtest_harness = True,
)

alias(
    name = "binary-tree",
    actual = ":binary_tree",
)
