[package]
name = "junitify-for-bazel"
version = "0.1.0"  #:version
authors = ["TODO <todo@example.org>"]
description = """
Mock crate to pull in cargo2junit
"""
edition = "2018"

[dependencies]
# unclear why cargo-bazel does not create a bazel repo for it
# 0.1.13 so we work on rust 1.63.0 on the dev machine
cargo2junit = { version = "=0.1.13", artifact = "bin" }

[dev-dependencies]
cargo2junit = { version = "=0.1.13", artifact = "bin" }


