load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "transpose",
    srcs = ["transpose.rs"],
    crate_root = "transpose.rs",
    edition = "2018",
    deps = [
        # ...list of dependencies if any...
    ],
)

rust_test(
    name = "transpose_test",
    srcs = ["transpose.rs"],
    crate_root = "transpose.rs",
    edition = "2018",
    deps = [
        # ...list of dependencies if any...
    ],
)